<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id ="@+id/mLanugage"
        android:title="@string/language_selection"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item
        android:id ="@+id/mSetup"
        android:title="@string/setup"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/mVoice"
        android:title="@string/voice"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/mGemini"
        android:title="@string/use_ai"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
</menu>

